recursion.cons.lessons.recursion.cons.Length.scala.error
length:4: error: value == is not a case class constructor, nor does it have an unapply/unapplySeq method
		case l==Nil => count;
                      ^